--- a/app/assets/stylesheets/projects.css.scss
+++ b/app/assets/stylesheets/projects.css.scss
@@ -56,7 +56,7 @@
   }
 
   .project-box-inner-photo {
-    width: 533px;
+    width: 530px;
   }
 
   .hangboards {
